# framework

./: README.md  repeatedna.c
cmake/: CMakeLists.cmake  CMakeLists.txt  CMakeLists.txt.cmake  make.sh  monitor.sh  readme
designmode/: Decorator.cpp  Factory.c  SimpleFactory.c  Singleton.c  TemplateMethod.c  abstractfactory.cpp  abstractfactory2.cpp  builder.cpp  builder2.cpp  command.cpp  iterator.cpp  oberserve.cpp  prototype.cpp  reademe  state.c  strategy.cpp
innosetup/: build.iss
leetcode/: repeatedna.c
leetcode/queue/: ngx_queue.c  ngx_queue.h
libevent/: event_server.cpp  libevent_frame.c  libevent_frame.h
linux/: command.sh
msic/: mystring.c  mystring.cpp  qaskydef.h  var.cpp
msic/ngx_slab/src/: ngx_shmtx.c
nginx/: hot_upgrade.c  netpacket_handle.c  new_bin.c  readme.txt  serial_port_handle.c
openssl/: MD5.cpp  Merkle_Sha1.cpp  base16.cpp  base58.cpp  openssl_bio_base64.cpp  test_ecc.cpp  test_evp_cipher.cpp  test_rsa_evp.cpp  xor_cipher.cpp  xsec.cpp  xsec.h
osal/: RuError.cc  oasl_list.h  osal_def.h  osal_list.c  osal_time.c  osla_time.h  serial_port.c  singalSlot.cc  串口函数解析.cpp
